# dataset-foundry

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  compose.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: api.md  architecture.md  extending.md  generation-methodology.md  getting-started.md  operations.md  quality-methodology.md  security.md  troubleshooting.md
docs/dataset-foundry/: 2026-07-18-build-completion.md  2026-07-18-open-source-adoption.md  2026-07-19-handoff-p2-workflow-polish.md
docs/handoffs/: 2026-07-18-codex-dataset-foundry-complete.handoff.mdc  2026-07-18-codex-dataset-foundry-open-source-adoption.handoff.mdc  2026-07-19-codex-dataset-foundry-p2-workflow-polish.handoff.mdc
docs/superpowers/plans/: 2026-07-18-dataset-foundry.md  2026-07-18-open-source-adoption-readiness.md  2026-07-19-handoff-p2-workflow-polish.md
examples/: alpaca-seeds.jsonl  canonical-chat-seeds.jsonl  custom_scorer.py  prompt-completion-seeds.csv
frontend/: cypress.config.ts  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/cypress/component/: api-client.cy.tsx  navigation.cy.tsx  states.cy.tsx  workbench.cy.tsx
frontend/cypress/support/: component-index.html  component.ts
frontend/src/: App.tsx  main.tsx  navigation.ts
frontend/src/api/: client.ts  demo.ts  queries.tsx  types.ts
frontend/src/components/: AppErrorBoundary.tsx  AppShell.tsx  Disclosure.tsx  Dropzone.tsx  InfoTip.tsx  MetricCard.tsx  PageHeader.tsx  ProgressBar.tsx  QualityReasonList.tsx  StatePanel.tsx  StatusBadge.tsx  ThemeProvider.tsx  format.ts  qualityReasonPresentation.ts
frontend/src/features/: ExportsView.tsx  GenerateView.tsx  OverviewView.tsx  ProjectsView.tsx  ReviewView.tsx  RunsView.tsx  SettingsView.tsx
frontend/src/styles/: base.css  components.css  index.css  responsive.css  shell.css  tokens.css
frontend/tests/e2e/: workbench.spec.ts
scripts/: __init__.py  benchmark_durable.py  benchmark_scale.py
src/dataset_foundry/: __init__.py  cli.py  config.py  container.py
src/dataset_foundry/api/: __init__.py  app.py  errors.py  middleware.py  schemas.py
tests/contract/: test_provider_contracts.py
tests/integration/: test_api_workflow.py  test_exports.py  test_generation_pipeline.py  test_repositories.py  test_worker.py
tests/live/: test_provider_smoke.py
tests/scale/: test_durable_scale.py
tests/unit/: test_cli.py  test_config.py  test_domain_models.py  test_ingestion.py  test_offline_provider.py  test_quality_pipeline.py  test_similarity.py  test_state_transitions.py
(+44 files in other folders)
