[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "dataset-foundry"
version = "0.1.0"
description = "A local-first synthetic training-data generation and quality workbench."
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = { text = "MIT" }
authors = [{ name = "Fortune Vieyra" }]
keywords = [
  "fine-tuning",
  "synthetic-data",
  "training-data",
  "fastapi",
  "llm",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: FastAPI",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "anthropic>=0.80,<1",
  "fastapi>=0.139,<0.140",
  "httpx>=0.28,<1",
  "numpy>=2,<3",
  "openai>=2.0,<3",
  "pyarrow>=21,<26",
  "pydantic>=2.11,<3",
  "pydantic-settings>=2.10,<3",
  "python-multipart>=0.0.20,<1",
  "rich>=14,<15",
  "sqlalchemy>=2.0.43,<3",
  "typer>=0.16,<1",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
huggingface = ["datasets>=4,<6"]
semantic = ["sentence-transformers>=5,<6"]

[dependency-groups]
dev = [
  "bandit>=1.8,<2",
  "build>=1.3,<2",
  "mypy>=1.17,<2",
  "pip-audit>=2.9,<3",
  "pytest>=9.0.3,<10",
  "pytest-asyncio>=1.1,<2",
  "pytest-cov>=6.2,<7",
  "ruff>=0.12,<1",
]

[project.scripts]
dataset-foundry = "dataset_foundry.cli:app"

[project.urls]
Homepage = "https://github.com/ownasquare/dataset-foundry"
Documentation = "https://github.com/ownasquare/dataset-foundry/tree/main/docs"
Issues = "https://github.com/ownasquare/dataset-foundry/issues"
Source = "https://github.com/ownasquare/dataset-foundry"
Changelog = "https://github.com/ownasquare/dataset-foundry/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/dataset_foundry"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
pythonpath = ["."]
testpaths = ["tests"]
markers = [
  "live: opt-in tests that call paid provider APIs",
  "scale: deterministic scale and resource tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["dataset_foundry"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC", "S", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S105", "S106"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["dataset_foundry"]
plugins = ["pydantic.mypy"]
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["pyarrow.*"]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", "frontend"]
skips = ["B101"]
